<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip" >

    <TextView
        android:id="@+id/textViewElementoLista"
        style="@style/TextoAsteroides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:gravity="center"
        android:text="@string/titulo"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button1"
        style="@style/Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonUno" />

    <Button
        android:id="@+id/button2"
        style="@style/Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botondos" />

    <Button
        android:id="@+id/button3"
        style="@style/Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botontres" />

    <Button
        android:id="@+id/button5"
        style="@style/Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botoncinco" />

    <Button
        android:id="@+id/button4"
        style="@style/Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botoncuatro" />

</LinearLayout>